--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "commonjs-require-package",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/plugin.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
